<package>
  <name>adaptive_motion_control</name>
  <version>0.1.0</version>
  <description>The adaptive_motion_control package (metapackage).</description>
  <author>Engin Karlidag</author>
  <author email="andreas@blank.engineer">Andreas Blank</author>
  <maintainer email="engin.karlidag@gmx.de">Engin Karlidag</maintainer>

  <license>Apache 2.0</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
